--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <div class="container"></div>
+    <div id="root"></div>
     <script src="assets/bundle.js"></script>
   </body>
 </html>
